--- a/src/sites/index.html
+++ b/src/sites/index.html
@@ -1,54 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
-    <style>
-        body {
-            background: #141414;
-            color: white;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        h1 {
-            font-size: 72px;
-            text-align: center;
-            color: yellow;
-        }
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>ParticleJS</title>
+    </head>
+    <body>
+        <div id="particles-js"></div>
 
-        main {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            translate: -50% -50%;
-            border: 1px solid #fff;
-            padding: 20px;
-            gap: 20px;
-            margin: 0;
-        }
+        <script src="PARTICLES-MIN-JS-SCRIPT"></script>
 
-        code {
-            background-color: #242424;
-            padding: 20px;
-            border-radius: 4px;
-            white-space: pre-wrap;
-        }
-        </style>
-</head>
-<body>
-    <h1>Test Page</h1>
-    <main>
-        <h2>Script Test</h2>
-        <code></code>
-    </main>
-    <script>
-        fetch('./api/index').then(res => res.json()).then(data => {
-            document.querySelector('code').textContent = JSON.stringify(data, null, 2)
-        });
-    </script>
-</body>
+        <script>
+            particlesJS.load("particles-js", "CONFIG_URL");
+        </script>
+    </body>
 </html>
